--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Club Linguistics
-description: A community which share ideas from various domains in various languages. 
+description: Club Linguistics is formed to increase the access of reading by spreading the stories in different languages. 
 github_username: ClubLinguistics
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blogs"
