--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ minima:
   social_links:
     twitter: 
     github: ClubLinguistics
+    instagram: https://www.instagram.com/42652075736566756c2e20/?hl=en
 
 # Set this to true to get LaTeX math equation support
 use_math: true
